# GlobalOpt

./: CMakeLists.txt  main.cpp
AGP/: AGP.cpp  AGP.h  CMakeLists.txt
Base/: CMakeLists.txt  classes.cpp  classes.h
Kushner/: CMakeLists.txt  Kushner.cpp  Kushner.h
Piyavsky/: CMakeLists.txt  Piyavsky.cpp  Piyavsky.h
